--- a/_config.yml
+++ b/_config.yml
@@ -300,8 +300,8 @@ display_categories: ["blockquotes"] # these categories will be displayed on the 
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Wenjie]
+  first_name: [Xu]
 
   style: apa
   locale: en
