Update some information

--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -5,4 +5,4 @@ github_repos:
   - alshedivat/al-folio
   - jekyll/jekyll
   - FortAwesome/Font-Awesome
-  - mathjax/MathJax
+  - WenjieXu2000/chinese-copywriting-guidelines
