Correct the inline code setting

--- a/_config.yml
+++ b/_config.yml
@@ -208,7 +208,7 @@ kramdown:
   syntax_highlighter_opts:
     css_class: "highlight"
     span:
-      line_numbers: true
+      line_numbers: false # Do not modify it, it will change the display of inline code to a new line with a line number.
     block:
       line_numbers: true
       start_line: 1
