Correct some errors

--- a/_config.yml
+++ b/_config.yml
@@ -277,6 +277,7 @@ defaults:
       sitemap: true
 
 sass:
+  sass_dir: _sass
   style: compressed
 
 # -----------------------------------------------------------------------------
